--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,11 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+# Database
+DATABASE_CLIENT=
+DATABASE_FILENAME=
+JWT_SECRET=
+# Payment
+CRYPTOMUS_API_KEY=
+CRYPTOMUS_MERCHANT_ID=
+CRYPTOMUS_API_URL=
