--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,10 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.23.1",
     "@strapi/plugin-users-permissions": "4.23.1",
-    "@strapi/strapi": "4.23.1",
+    "@strapi/strapi": "^4.24.4",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
