--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.12",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "daisyui": "^4.10.2",
+    "jspdf": "^2.5.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "strapi-sdk-javascript": "^0.3.3",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/body-parser": "^1.19.5"
   }
 }
